[gd_scene load_steps=41 format=2]

[ext_resource path="res://fire.gd" type="Script" id=1]
[ext_resource path="res://fire_b34c5c06800b3a04d57a8e1e56d654ae.png" type="Texture" id=2]
[ext_resource path="res://light_white_320.png" type="Texture" id=3]
[ext_resource path="res://rauch.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 448, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 448, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 448, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 448, 384, 64, 128 )

[sub_resource type="SpriteFrames" id=33]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "default",
"speed": 40.0
} ]

[sub_resource type="CapsuleShape2D" id=34]
radius = 40.0
height = 32.0

[sub_resource type="CircleShape2D" id=35]
radius = 80.399

[sub_resource type="Gradient" id=36]
offsets = PoolRealArray( 0, 5 )
colors = PoolColorArray( 0.752941, 0.752941, 0.752941, 1, 1, 1, 1, 1 )

[node name="fire" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 33 )
frame = 26
playing = true
offset = Vector2( 0, -48 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -56 )
shape = SubResource( 34 )

[node name="Area2D_near" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_near"]
position = Vector2( 0, -56 )
shape = SubResource( 35 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
show_behind_parent = true
position = Vector2( 5.68434e-14, -32 )
rotation = 3.14159
amount = 32
lifetime = 2.0
speed_scale = 0.5
randomness = 1.0
lifetime_randomness = 1.0
draw_order = 1
emission_shape = 1
emission_sphere_radius = 32.0
gravity = Vector2( 0, 200 )
angular_velocity = 90.0
angular_velocity_random = 1.0
tangential_accel = 12.0
tangential_accel_random = 1.0
scale_amount = 2.0
color = Color( 0.886275, 0.533333, 0.0823529, 1 )

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
modulate = Color( 0.137255, 0.129412, 0.117647, 1 )
show_behind_parent = true
position = Vector2( 5.68434e-14, -32 )
rotation = 3.14159
amount = 32
lifetime = 2.0
speed_scale = 0.5
randomness = 1.0
lifetime_randomness = 1.0
draw_order = 1
emission_shape = 1
emission_sphere_radius = 32.0
gravity = Vector2( 0, 100 )
angular_velocity = 90.0
angular_velocity_random = 1.0
tangential_accel = 12.0
tangential_accel_random = 1.0
scale_amount = 2.0

[node name="CPUParticles2D_smoke" type="CPUParticles2D" parent="."]
modulate = Color( 0.137255, 0.129412, 0.117647, 1 )
show_behind_parent = true
position = Vector2( 1.13687e-13, -64 )
rotation = 3.14159
amount = 16
lifetime = 2.5
speed_scale = 0.5
randomness = 1.0
lifetime_randomness = 1.0
texture = ExtResource( 4 )
emission_shape = 1
emission_sphere_radius = 16.0
gravity = Vector2( 0, 100 )
radial_accel = 21.33
radial_accel_random = 1.0
tangential_accel = 12.0
tangential_accel_random = 1.0
angle = 195.6
angle_random = 1.0
scale_amount = 2.0
scale_amount_random = 1.0
color_ramp = SubResource( 36 )
hue_variation = 1.0
hue_variation_random = 1.0
anim_speed = 14.51
anim_speed_random = 1.0

[node name="Timer_1s" type="Timer" parent="."]
process_mode = 0
autostart = true

[node name="Timer_005s" type="Timer" parent="."]
process_mode = 0
autostart = true

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 3 )
energy = 0.5
shadow_enabled = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D_near" to="." method="_on_Area2D_near_body_entered"]
[connection signal="body_exited" from="Area2D_near" to="." method="_on_Area2D_near_body_exited"]
[connection signal="timeout" from="Timer_1s" to="." method="_on_Timer_1s_timeout"]
[connection signal="timeout" from="Timer_005s" to="." method="_on_Timer_005s_timeout"]
